--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="app_name">QuadraticEquation</string>
-    <string name="solution">Solution:</string>?
-    <string name="solution_text">Solution_text</string>?
-    <string name="submit">Submit</string>
+    <string name="app_name">MathCalculator</string>
 </resources>
